# pocket-option-research-system

./: .env.example  .flake8  .gitignore  README.md  phase42.md  phase43.md  phase44.md  phase45.md  phase46.md  phase47.md  phase48.md  phase49.md  phase54.md  phase55.md  phase57.md  phase58.md  phase59.md  phase60.md  phase61.md  phase62.md  phase63.md  phase64.md  phase65.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/data/: models.py  (+3 more)
configs/: dashboard.yaml
data/: sample_eurusd_m1.csv
scripts/: check_arabic_dashboard.py  check_architecture.py  check_architecture_audit.py  check_broker_readiness.py  check_broker_runtime.py  check_browser_observation.py  check_confluence.py  check_connectivity.py  check_control_assurance.py  check_dashboard.py  check_dashboard_ux.py  check_data_layer.py  check_dataset_quality.py  check_environment.py  check_execution_readiness.py  check_execution_simulation.py  check_external_data.py  check_external_observation.py  check_governance_traceability.py  check_integration_safety.py  check_knowledge_graph.py  check_live_feed.py  check_live_observation.py  check_market_data.py  check_market_observation.py  check_market_regime.py  check_multi_timeframe.py  check_observation_intelligence.py  check_observation_layer.py  check_operational_governance.py  check_opportunity_engine.py  check_paper_control_center.py  check_paper_execution.py  check_paper_live_readiness.py  check_paper_portfolio.py  check_pattern_memory.py  check_platform_certification.py  check_post_research_architecture.py  check_production_system_design.py  (+79 more)
(+1529 files in other folders)
